replace duckdb with spark